tests/typing/faulty_namespace.sy
use _import
a := 1
start :: fn {
    _import.q + 1
    _import.q + 1.0
    a = "abc"
}
// error: $BinOp { .. }
// error: $MismatchAssign { .. }
